--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "cookie-parser": "^1.4.6",
     "ejs": "^3.1.6",
     "express": "^4.17.3",
+    "express-session": "^1.17.2",
     "path": "^0.12.7"
   }
 }
