--- a/package.json
+++ b/package.json
@@ -24,11 +24,13 @@
     "nodemon": "^2.0.15"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.2",
     "cookie-parser": "^1.4.6",
     "ejs": "^3.1.6",
     "express": "^4.17.3",
     "express-session": "^1.17.2",
+    "mysql2": "^2.3.3",
     "path": "^0.12.7"
   }
 }
